@@ -207,7 +207,7 @@ map_document_layout = {
             ],
             [{'widget_id': 'map_rendering', 'ncols': 1}, 
             ],
-            [{'widget_id': 'results', 'ncols': 1},
+            [{'widget_id': 'search', 'ncols': 1},
             ],
         ],
     },
