@@ -10,12 +10,7 @@
 
 from Products.CPSGeo.georss import brainsToGeoRSS
 
-results = context.getContent().results
-brains = []
-for r in results:
-    brain = context.portal_catalog(path=r)
-    if brain:
-        brains.append(brain[0])
+brains = context.getSearchWidgetContents(context.getContent().getDataModel())
 container.REQUEST.RESPONSE.setHeader('Content-type', 'text/xml')
 return brainsToGeoRSS(context.title, context.absolute_url(), brains)
 
